# git_anj_brickjump

./: .anjuta_sym_db.db  LevelData.json  README.md  configure.ac
images/: brickjump.py
images/runningman/: NotesonCropping.txt
src/: LevelData.json  Makefile.am  brick.py  brickjump.py  finishline.py  game_functions.py  git_anj_jump.py  git_anj_jump.py~  levels.py  python_brickjump.py  runningman.py  scoreboard.py  settings.py
