## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = git_anj_jump.py

## Directory where .class files will be installed
git_anj_jumpdir = $(pythondir)/git_anj_jump

git_anj_jump_PYTHON = \
	git_anj_jump.py \
	python_brickjump.py \
	brick.py \
	brickjump.py \
	game_functions.py \
	levels.py \
	runningman.py \
	scoreboard.py \
	settings.py \
	finishline.py
